Changes to BC and behaviour in version 4.1.0
============================================

Requirement changes
-------------------

- New eZ Components being used:
  - SystemInformation
  - Archive

Deprecated features
-------------------

Removed features
----------------

- eZSelectionType loose functions

  The file in which eZSelectionType is defined contained two loose functions, 
  namely serializeContentObjectAttribute and unserializeContentObjectAttribute,
  which at the time of introducing them were supposed to be inside the class 
  definition. These two functions have been removed.
  
- eZFilePassthroughHandler

  The deprecated class eZFilePassthroughHandler was removed. Use
  ezFilePassthroughHandler instead.
  
- eZXMLInputType

  The class eZXMLInputType, which was not any longer used by any part of the eZ
  Publish kernel, has been removed.

New constants in config.php
---------------------------

EZP_INI_FILEMTIME_CHECK
    This new setting controls whether eZINI should check if the settings have
    been updated in the *.ini-files*. If this check is disabled eZ Publish
    will always used the cached values, lowering the amount of stat-calls to
    the file system, and thus increasing performance.

EZP_AUTOLOAD_ALLOW_KERNEL_OVERRIDE
    This setting controls if eZ Publish's autoload system should allow, and
    load classes, which override kernel classes from extensions.

Changes to method signatures
----------------------------

- eZContentObject - fetchAttributesByIdentifier

  Parameter 3 is changed to be an array of locale codes, rather than a string
  with locale code.
  
- eZDBClusterFileHandler - getFileList

  The parameters have been completely changed. Earlier, getFileList() accepted
  2 booleans to define if files in the scopes 'binaryfile' and 'image' should 
  be omitted. Now the method accepts an array of scopes of the files you want 
  to be returned, and a boolean with which you can reverses the behavior so 