@@ -24,6 +24,7 @@
 * @author   Vincent Blavet <vincent@blavet.net>
 * @version  $Revision: 1.20 $
 * @package  Archive
+* @deprecated
 */
 class eZTARArchiveHandler extends eZArchiveHandler
 {
@@ -68,6 +69,8 @@ class eZTARArchiveHandler extends eZArchiveHandler
     */
     function eZTARArchiveHandler( &$fileHandler, $p_tarname, $p_compress = false )
     {
+        eZDebug::writeWarning( __CLASS__ . "::" . __FUNCTION__ . " is deprecated, use ezcArchive instead" );
+
         $this->eZArchiveHandler( $fileHandler );
 //         $this->PEAR();
         $this->_tarname = $p_tarname;
