@@ -22,6 +22,8 @@ Repositories[]=kernel/classes
 #Handlers need to be placed in the extension subdir "binaryhandlers".
 ExtensionRepositories[]
 
+# DEPRECATED:
+# This setting will be removed in 4.2
 [ArchiveSettings]
 Handlers[]
 Handlers[tar]=eztararchivehandler
